--- a/mpv-config/input.conf
+++ b/mpv-config/input.conf
@@ -1,5 +1,7 @@
-k add volume 2
-j add volume -2
+k add volume 5
+j add volume -5
+K add volume 10
+J add volume -10
 h seek -5
 H seek -10
 l seek 5
