backing up just to be sure

--- a/mpv-config/mpv.conf
+++ b/mpv-config/mpv.conf
@@ -1,4 +1,7 @@
 sub-font = "Barlow"
-sub-font-size = "50"
+sub-font-size = "40"
 --osd-font = 'Barlow'
+--osd-font-size = '40'
 --save-position-on-quit
+no-keepaspect-window
+--loop
